# vibe-todo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md  TASKS.md  TASK_SUMMARY.md  prompt_history.json
docs/tasks/: README.md  task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md  task-08.md  task-09.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-15.md  task-16.md  task-17.md  task-18.md  task-19.md  task-20.md  task-21.md  task-22.md  task-23.md  task-24.md  task-25.md  task-26.md  task-27.md  task-28.md  task-29.md  task-30.md  task-31.md  task-32.md  task-33.md
src/vibe_todo/: __init__.py  database.py  db_helper.py  logger.py  models.py  services.py  state.py  ui.py
src/vibe_todo/tests/: test_state.py
tests/: test_vibe_todo.py
