[project]
name = "vibe-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "loguru>=0.7.0",
    "python-dateutil>=2.8.0",
    "sqlmodel>=0.0.14",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"